--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/index/article",
     "pages/index2/index2",
     "pages/index3/index3",
     "pages/index4/index4",   
