--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/index/article",
     "pages/index2/index2",
     "pages/index3/index3",
-    "pages/index4/index4",   
+    "pages/index4/index4",
     "pages/index4/schedule",
     "pages/index4/curve",
     "pages/index4/favor",
     "pages/index4/about",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/index4/follow"
   ],
   "tabBar": {
     "custom": true,
@@ -40,14 +41,14 @@
         "pagePath": "pages/index4/index4",
         "iconPath": "image/me_black.png",
         "selectedIconPath": "image/me.png",
-        "text": "我的"
+        "text": "设置"
       }
     ]
   },
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#D9C9BA",
     "navigationBarTitleText": "一见",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
